fix: Add z-index to NavBar

--- a/client/src/components/NavBar/styles.scss
+++ b/client/src/components/NavBar/styles.scss
@@ -13,6 +13,7 @@
     #212f38 100%
   );
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+  z-index: 10;
 }
 
 .navbar-title-container {
